# LoCalendar

./: README.md  WARP.md  lo_calendar_mvp_blueprint_v_0.md  package-lock.json  package.json  tailwind.config.js
license-server/: Cargo.toml  README.md
license-server/src/: main.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  licensing.rs  main.rs
src/components/: ICSImportModal.tsx  LicensePrompt.tsx
src/domain/: holidays.ts  icsImport.ts  layout.ts  models.ts  recurrence.ts
src/render/: CalendarPage.tsx
src/store/: calendarStore.ts  db.ts  licenseStore.ts  useInitializeStore.ts
src/styles/: index.css
